# HandsomeNet

./: .env.example  .gitignore  LICENSE  README.md  TESTING_COMMIT.md  pyproject.toml
.github/workflows/: ci.yml
configs/: model_v1.yaml  project.yaml
docs/: dataset_setup.md  repo_roadmap.md
docs/specs/: handsomenet_v1_locked_spec.md
scripts/: README.md  evaluate.py  run_training_plan.py  train.py  verify_freihand.py  webcam_demo.py
src/handsomenet/: __init__.py  constants.py  settings.py  types.py
src/handsomenet/data/: __init__.py  contracts.py  freihand.py  geometry.py  splits.py  tensor_dataset.py
src/handsomenet/inference/: __init__.py  webcam.py
src/handsomenet/models/: __init__.py  architecture.py  backbone.py  baseline.py  coordinate_head.py  factory.py  graph_attention.py  handsomenet.py  token_extractor.py
src/handsomenet/training/: __init__.py  losses.py  metrics.py  runtime.py  trainer.py
src/handsomenet/utils/: __init__.py  io.py  visualization.py
tests/: test_baseline_model.py  test_constants.py  test_contracts.py  test_evaluate_script.py  test_freihand_dataset.py  test_handsomenet_model.py  test_tensor_dataset.py  test_training_plan_script.py  test_training_stack.py  test_webcam_demo_script.py  test_webcam_inference.py
